--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>Primeros pasos con GIT</h1>
     <p>Vamos a ver de que va esto</p>
     <p>Después de conectar con repo</p>
+    <p>Algo hemos conseguido después de introducir user y mail en git config mediante consola y darle al comando Commit del menú de Git </p>
 </body>
 </html>
