--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <p>Vamos a ver de que va esto</p>
     <p>Después de conectar con repo</p>
     <p>Algo hemos conseguido después de introducir user y mail en git config mediante consola y darle al comando Commit del menú de Git </p>
+    <p>Y este párrafo lo añado desde el server</p>
 </body>
 </html>
