cambios en local desde clase

--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     <p>Después de conectar con repo</p>
     <p>Algo hemos conseguido después de introducir user y mail en git config mediante consola y darle al comando Commit del menú de Git </p>
     <p>Y este párrafo lo añado desde el server</p>
+    <p>Y hoy, otro párrafo más que hará que todo vuelva a empezar</p>
 </body>
 </html>
