--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     <p>Algo hemos conseguido después de introducir user y mail en git config mediante consola y darle al comando Commit del menú de Git </p>
     <p>Y este párrafo lo añado desde el server</p>
     <p>Y hoy, otro párrafo más que hará que todo vuelva a empezar</p>
+    <p>Y otro desde Mac una noche de pruebas</p>
 </body>
 </html>
