otro Commit. Parece que desde VSCode se puede gestionar el flujo de edición actual, pero no los commits pasados. No veo un control de la historia.

--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
     <p>Y este párrafo lo añado desde el server</p>
     <p>Y hoy, otro párrafo más que hará que todo vuelva a empezar</p>
     <p>Y otro desde Mac una noche de pruebas</p>
+    <p>Y de repente en el panel de Git no hay nada, solo el botón de Sync Changes!!</p>
 </body>
 </html>
